# MatrixCalc

./: CMakeLists.txt
include/: matrix.h
src/: matrix.cpp
test/: test.cpp
